force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>Proyecto</label>
    <nameField>
        <label>Proyecto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proyectos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>