force-app/main/default/objects/Project__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitado</fullName>
                <default>true</default>
                <label>Solicitado</label>
            </value>
            <value>
                <fullName>Validado</fullName>
            </value>
            <value>
                <fullName>Priorizado</fullName>
            </value>
            <value>
                <fullName>En Cola</fullName>
            </value>
            <value>
                <fullName>En Desarrollo</fullName>
            </value>
            <value>
                <fullName>En Prueba</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>