force-app/main/default/objects/Project__c/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <label>Objetivo</label>
    <type>TextArea</type>
</CustomField>