force-app/main/default/objects/Project__c/fields/Prioridad__c.field-meta.xml
<CustomField>
    <fullName>Prioridad__c</fullName>
    <label>Prioridad</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>