force-app/main/default/objects/Project__c/fields/Proyecto_Padre__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_Padre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto Padre</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Proyectos</relationshipLabel>
    <relationshipName>Proyectos</relationshipName>
    <type>Lookup</type>
</CustomField>