force-app/main/default/objects/Project__c/fields/Tiempo_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Estimado__c</fullName>
    <label>Tiempo Estimado</label>
    <summarizedField>Tareas__c.Tiempo_estimado__c</summarizedField>
    <summaryForeignKey>Tareas__c.Proyecto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>